# synesthesia

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/invite/: Cargo.toml
pallets/invite/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
