[package]
authors = ['Shawn Tabrizi <shawntabrizi@gmail.com>']
edition = '2018'
homepage = 'https://synesthesia.network'
license = 'GPL-3.0-or-later'
name = 'synesthesia-runtime'
repository = 'https://github.com/synesthesia-network/synesthesia/'
version = '0.8.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', git = "https://github.com/paritytech/substrate", branch = "synesthesia" }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false, optional = true}
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
