[package]
authors = ['Shawn Tabrizi <shawntabrizi@gmail.com>']
description = 'Invitation System'
edition = '2018'
homepage = 'https://synesthesia.network'
license = 'GPL-3.0-or-later'
name = 'pallet-invite'
repository = 'https://github.com/synesthesia-network/synesthesia/'
version = '0.8.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "synesthesia", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "synesthesia" }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
]
